--- a/index.html
+++ b/index.html
@@ -3136,6 +3136,12 @@ xdg-open http://localhost:4000</pre>
 <div class="paragraph">
 <p>Besides <a href="#chinese-cuisine">Chinese food</a>, Ciro really likes eating fruits and nuts, maybe partly because he was <a href="#ciro-santillis-biography">born in Brazil</a>, and partly because of monkey nature, see <a href="#ciro-santilli">his Chinese name</a>. At home is is known as "水果大王" (the big king of the fruits).</p>
 </div>
+<div class="paragraph">
+<p>Ciro does not like receiving or giving gifts on expected social situations like birthdays or Christmas. Ciro believes that every day is equally precious, and can be a day to give, be it through awesome <a href="#open-source-software">Open source software</a> contributions, or if you find something that your friend will like</p>
+</div>
+<div class="paragraph">
+<p>When Ciro was a teenager, he was extremely cheap e.g. for clothes, food and video games, even tough his family didn&#8217;t have bad financial conditions. This was mostly to save the world by not wasting resources that other people in need could use, and to save money so he could have more money to do more of whatever he wanted without the obligation to work. But Ciro admits that shocking people with the incredible level of low quality goods was also fun. Ciro changed after he came to Europe, especially in regards to food, <a href="#ciro-santillis-formal-education">Ciro Santilli&#8217;s formal education</a>, perhaps corrupted by the fact that now the best chocolates, cheeses and breads in the world were not much more expensive than the cheapest brand you could buy. He still hates clothes that are just to look good like costumes though.</p>
+</div>
 <div class="sect3">
 <h4 id="effortless-effort"><a class="anchor" href="#effortless-effort"></a><a class="link" href="#effortless-effort">1.9.1. Effortless effort 無爲</a></h4>
 <div class="paragraph">
@@ -4837,6 +4843,9 @@ xdg-open http://localhost:4000</pre>
 <p>1972 <a href="https://www.youtube.com/watch?v=MlmZIazQLJw">Você Não Entende Nada</a> performed by Caetano Veloso in album <a href="https://en.wikipedia.org/wiki/Caetano_e_Chico:_Juntos_e_Ao_Vivo">Caetano e Chico: Juntos e Ao Vivo (1972)</a>, originally by (TODO album, <a href="https://www.discogs.com/Gal-Costa-Legal-Voc%C3%AA-N%C3%A3o-Entende-Nada/release/5872459">Discogs</a> says Legal (1970), but <a href="https://en.wikipedia.org/wiki/Legal_(Gal_Costa_album)">wiki page</a> and photos of back disagree)</p>
 </li>
 <li>
+<p>1972 <a href="https://www.youtube.com/watch?v=bGC0gJAHIYs">Partido Alto</a>. Composed by Chico Buarque, but Caetano&#8217;s interpretation takes it to another level</p>
+</li>
+<li>
 <p>1976 <a href="https://www.youtube.com/watch?v=9HpqgwC30Zg">Um Índio</a> from the <a href="https://en.wikipedia.org/wiki/Doces_B%C3%A1rbaros">Doces Bárbaros (1976)</a> album, and also appeared in the <a href="https://en.wikipedia.org/wiki/Bicho_(album)">Bicho (1977)</a> album</p>
 </li>
 <li>
@@ -4868,6 +4877,9 @@ xdg-open http://localhost:4000</pre>
 <p><a href="https://en.wikipedia.org/wiki/Chico_Buarque">Chico Buarque</a>. Ciro&#8217;s second favorite.</p>
 <div class="ulist">
 <ul>
+<li>
+<p>1970 <a href="https://www.youtube.com/watch?v=33-bMTOlvx0">Apesr de Você</a> (<a href="https://pt.wikipedia.org/wiki/Apesar_de_Voc%C3%AA">wiki</a>)</p>
+</li>
 <li>
 <p>1968 <a href="https://www.youtube.com/watch?v=G4SkmKGBe_E">Roda Viva</a> from the <a href="https://pt.wikipedia.org/wiki/Chico_Buarque_de_Hollanda_-_Volume_3">Chico Buarque de Hollanda - Volume 3 (1968)</a> album</p>
 </li>
@@ -4910,17 +4922,37 @@ xdg-open http://localhost:4000</pre>
 </div>
 </li>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Gilberto_Gil">Gilberto Gil</a>. The third of the holy trinity of MPB after Caetano and Chico. Good selection: <a href="https://pt.wikipedia.org/wiki/Ac%C3%BAstico_MTV_-_Gilberto_Gil">Acústico MTV - Gilberto Gil (1994)</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Gilberto_Gil">Gilberto Gil</a>. The third of the holy trinity of MPB after Caetano and Chico. Good selection: <a href="https://pt.wikipedia.org/wiki/Ac%C3%BAstico_MTV_-_Gilberto_Gil">Acústico MTV - Gilberto Gil (1994)</a>. Perhaps Ciro likes him third because he is the most lighthearted one, although not always.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.youtube.com/watch?v=kg6DCav1gek">Lunik 9</a> from the <a href="https://en.wikipedia.org/wiki/Louva%C3%A7%C3%A3o">Louvação (1967)</a> album</p>
+<p>1967 <a href="https://en.wikipedia.org/wiki/Louva%C3%A7%C3%A3o">Louvação (1967)</a> album</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=kg6DCav1gek">Lunik 9</a></p>
 </li>
 <li>
-<p><a href="https://www.youtube.com/watch?v=aipWGQeX2JY">A Paz</a> from the <a href="https://en.wikipedia.org/wiki/Louva%C3%A7%C3%A3o">Louvação (1967)</a> album</p>
+<p><a href="https://www.youtube.com/watch?v=aipWGQeX2JY">A Paz</a></p>
+</li>
+</ul>
+</div>
 </li>
 <li>
-<p><a href="https://www.youtube.com/watch?v=uT21kqCoQro">Refazenda</a> from the <a href="https://pt.wikipedia.org/wiki/Refazenda">Refazenda (1975)</a> album</p>
+<p>1972 <a href="https://www.youtube.com/watch?v=1nOaAoa1bWA">Expresso 2222</a> from the <a href="https://en.wikipedia.org/wiki/Expresso_2222">Expresso 2222</a> album</p>
+</li>
+<li>
+<p>1975 <a href="https://pt.wikipedia.org/wiki/Refazenda">Refazenda (1975)</a> album</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=uT21kqCoQro">Refazenda</a></p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=O6CQsOI2qMg">Lamento Sertanejo</a></p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div>
@@ -7198,7 +7230,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/1d5883b77e8e546cd83204d706db3030f2de656d">1d5883b77e8e546cd83204d706db3030f2de656d</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/91d8eb6fe4d2674d1b61119535643f6f141f75a7">91d8eb6fe4d2674d1b61119535643f6f141f75a7</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
