aad6871173c50c6199bb17410627b9371a1fb763

--- a/index.html
+++ b/index.html
@@ -4813,7 +4813,7 @@ xdg-open http://localhost:4000</pre>
 <p>In Portuguese <a href="https://en.wikipedia.org/wiki/M%C3%BAsica_popular_brasileira">Música Popular Brasileira (MPB)</a>.</p>
 </div>
 <div class="paragraph">
-<p>The good songs stopped before of just after Ciro was born, they were originally heard by his parent&#8217;s generation. Those young new kids are boring.</p>
+<p>The good songs stopped before of just after <a href="#ciro-santilli">Ciro Santilli</a> was born, they were originally heard by his parent&#8217;s generation. Those young new kids are boring.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -4827,7 +4827,7 @@ xdg-open http://localhost:4000</pre>
 <p>1977 <a href="https://www.youtube.com/watch?v=sQU7iQDiZvA">Marimbondo</a> track from the "Pirão de Peixe com Pimenta (1977)" album <a href="https://en.wikipedia.org/wiki/S%C3%A1_%26_Guarabyra">Sá &amp; Guarabyra</a></p>
 </li>
 <li>
-<p><a href="https://www.youtube.com/watch?v=7VE6PNwmr9g">Metamorfose ambulante</a> from the <a href="https://en.wikipedia.org/wiki/Krig-ha,_Bandolo!">Krig-ha, Bandolo!</a> album by <a href="https://en.wikipedia.org/wiki/Raul_Seixas">Raul Seixas</a></p>
+<p>1973 <a href="https://www.youtube.com/watch?v=7VE6PNwmr9g">Metamorfose ambulante</a> from the <a href="https://en.wikipedia.org/wiki/Krig-ha,_Bandolo!">Krig-ha, Bandolo! (1973)</a> album by <a href="https://en.wikipedia.org/wiki/Raul_Seixas">Raul Seixas</a></p>
 </li>
 <li>
 <p><a href="https://en.wikipedia.org/wiki/Caetano_Veloso">Caetano Veloso</a> is arguably <a href="#ciro-santilli">Ciro Santilli</a>'s favorite MPB artist, he has just too many amazing songs.</p>
@@ -4853,12 +4853,6 @@ xdg-open http://localhost:4000</pre>
 </li>
 <li>
 <p>1978 album <a href="https://en.wikipedia.org/wiki/Muito_(Dentro_da_Estrela_Azulada)">Muito (Dentro da Estrela Azulada)</a></p>
-</li>
-<li>
-<p>1980 <a href="https://www.youtube.com/watch?v=4ra8DHnO2cc">Menino do Rio</a> apparently from 1980 and served as inspiration for the <a href="https://pt.wikipedia.org/wiki/Menino_do_Rio">Menino do Rio (1980)</a> movie, which is silly but fun</p>
-</li>
-<li>
-<p>1984 <a href="https://www.youtube.com/watch?v=_CuWgaJMg0U">O quereres</a> from the <a href="https://pt.wikipedia.org/wiki/Vel%C3%B4">Velô (1984)</a> album</p>
 <div class="ulist">
 <ul>
 <li>
@@ -4869,6 +4863,12 @@ xdg-open http://localhost:4000</pre>
 </li>
 </ul>
 </div>
+</li>
+<li>
+<p>1980 <a href="https://www.youtube.com/watch?v=4ra8DHnO2cc">Menino do Rio</a> apparently from 1980 and served as inspiration for the <a href="https://pt.wikipedia.org/wiki/Menino_do_Rio">Menino do Rio (1980)</a> movie, which is silly but fun</p>
+</li>
+<li>
+<p>1984 <a href="https://www.youtube.com/watch?v=_CuWgaJMg0U">O quereres</a> from the <a href="https://pt.wikipedia.org/wiki/Vel%C3%B4">Velô (1984)</a> album</p>
 </li>
 </ul>
 </div>
@@ -4960,7 +4960,7 @@ xdg-open http://localhost:4000</pre>
 </ul>
 </div>
 <div class="paragraph">
-<p>Roberto Carlos makes <a href="#ciro-santilli">Ciro Santilli</a> cringe.</p>
+<p><a href="https://en.wikipedia.org/wiki/Roberto_Carlos_(singer)">Roberto Carlos</a> makes Ciro cringe.</p>
 </div>
 </div>
 </div>
@@ -5884,7 +5884,7 @@ xdg-open http://localhost:4000</pre>
 <p><a href="https://en.wikipedia.org/wiki/Oracle_Corporation" class="bare">https://en.wikipedia.org/wiki/Oracle_Corporation</a></p>
 </div>
 <div class="paragraph">
-<p><a href="#evil">Evil</a> company that desecrated the beauty created by <a href="https://en.wikipedia.org/wiki/Sun_Microsystems">Sun</a>, and was <a href="https://en.wikipedia.org/wiki/Oracle_America,_Inc._v._Google,_Inc.">trying to bury Java once and or all in the 2010&#8217;s</a>.</p>
+<p><a href="#evil">Evil</a> company that desecrated the beauty created by <a href="https://en.wikipedia.org/wiki/Sun_Microsystems">Sun</a>, and was <a href="https://en.wikipedia.org/wiki/Google_v._Oracle_America">trying to bury Java once and or all in the 2010&#8217;s</a>.</p>
 </div>
 <div class="paragraph">
 <p>Their database has already been surpassed by open source, and <a href="https://en.wikipedia.org/wiki/Enterprise_resource_planning">ERP</a> and <a href="https://en.wikipedia.org/wiki/Customer_relationship_management">CRM</a> is boring.</p>
@@ -6291,7 +6291,7 @@ xdg-open http://localhost:4000</pre>
 <p><a href="#javascript">JavaScript</a>: it is totally fine if NodeJS destroys Python and becomes the ONE scripting language to rule them all since Python and JavaScript are almost equally crappy.</p>
 </li>
 <li>
-<p>Java: good language, but has an ugly enterprisey ecosystem, Oracle has made / kept the development process too closed, and <a href="https://en.wikipedia.org/wiki/Oracle_America,_Inc._v._Google,_Inc" class="bare">https://en.wikipedia.org/wiki/Oracle_America,_Inc._v._Google,_Inc</a>.[API patenting madness on Android just kills if off completely]</p>
+<p>Java: good language, but has an ugly enterprisey ecosystem, Oracle has made / kept the development process too closed, and <a href="https://en.wikipedia.org/wiki/Google_v._Oracle_America">API patenting madness on Android just kills if off completely</a></p>
 </li>
 <li>
 <p>Haskell: many have tried to learn some functional stuff, but too hard. Sounds really cool though.</p>
@@ -6699,7 +6699,7 @@ void main() {
 <p>the best full featured free OS we have today, since POSIX gave up short of any UI specification, and Chrome OS is not there yet</p>
 </li>
 <li>
-<p>usable and likely efficient Java API for apps if <a href="https://en.wikipedia.org/wiki/Oracle_America,_Inc._v._Google,_Inc" class="bare">https://en.wikipedia.org/wiki/Oracle_America,_Inc._v._Google,_Inc</a>.[Oracle doesn&#8217;t manage to destroy it with its lawsuit]</p>
+<p>usable and likely efficient Java API for apps if <a href="https://en.wikipedia.org/wiki/Google_v._Oracle_America">Oracle doesn&#8217;t manage to destroy it with its lawsuit</a></p>
 </li>
 </ul>
 </div>
@@ -7230,7 +7230,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/91d8eb6fe4d2674d1b61119535643f6f141f75a7">91d8eb6fe4d2674d1b61119535643f6f141f75a7</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/aad6871173c50c6199bb17410627b9371a1fb763">aad6871173c50c6199bb17410627b9371a1fb763</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
