eadc63c46c5e9413232e9e27b7eb0085768029aa

--- a/index.html
+++ b/index.html
@@ -3142,6 +3142,9 @@ xdg-open http://localhost:4000</pre>
 <div class="paragraph">
 <p>When Ciro was a teenager, he was extremely cheap e.g. for clothes, food and video games, even tough his family didn&#8217;t have bad financial conditions. This was mostly to save the world by not wasting resources that other people in need could use, and to save money so he could have more money to do more of whatever he wanted without the obligation to work. But Ciro admits that shocking people with the incredible level of low quality goods was also fun. Ciro changed after he came to Europe, especially in regards to food, <a href="#ciro-santillis-formal-education">Ciro Santilli&#8217;s formal education</a>, perhaps corrupted by the fact that now the best chocolates, cheeses and breads in the world were not much more expensive than the cheapest brand you could buy. He still hates clothes that are just to look good like costumes though.</p>
 </div>
+<div class="paragraph">
+<p>Ciro has some respiratory allergies. When he was around 5, he had relatively serious <a href="https://en.wikipedia.org/wiki/Asthma">asthma</a> crisis which scared parents were scared to death. Throughout his life, he appears to be allergic at an intermediate level to: mold or dust mites (or whatever it is that old books / pillows have), cats (itching on touch), hayfever (in May in the UK, likely grass pollen). Ciro believes however that this also gives him higher resistance to viral infections, since it has been many many years since he had a cold/flu, and when everyone in the office is going down with it, he&#8217;s just fine. Ciro wonders if his active immune system will actually kill off cancers early, which he ranks as his most likely causes of death, along with respiratory and gastro-intestinal problems. Ciro has low blood pressure and cannot get fat, so cardio vascular problems seem much less likely.</p>
+</div>
 <div class="sect3">
 <h4 id="effortless-effort"><a class="anchor" href="#effortless-effort"></a><a class="link" href="#effortless-effort">1.9.1. Effortless effort 無爲</a></h4>
 <div class="paragraph">
@@ -3204,10 +3207,16 @@ xdg-open http://localhost:4000</pre>
 <p>Fame is slightly convertible into money with generally little liquidity, but is more valuable if money becomes useless in a <a href="https://en.wiktionary.org/wiki/TEOTWAWKI">TEOTWAWKI</a>.</p>
 </div>
 <div class="paragraph">
+<p>Of course, in the end, one just does whatever seems cool and useful, and the Gods decide what proportion of fame/money/power they will get. Due to Ciro&#8217;s love of <a href="#open-source-software">Open source software</a> however, a higher fame percentage seems more likely than money.</p>
+</div>
+<div class="paragraph">
 <p>Ciro Santilli&#8217;s <a href="#ciro-santillis-homonyms">full name is quite unique</a>, however searching for just <a href="https://www.google.com/search?q=%22ciro%22">"Ciro"</a> on Google does not give any Ciro Santilli hits, mostly some smaller brands that could be beaten, this is Ciro&#8217;s main initial fame metric goal. Reaching it would require doing things known much beyond the programming community however, as Ciro has done until of 2019.</p>
 </div>
 <div class="paragraph">
-<p>The ultimate dream however would be to beat <a href="https://en.wikipedia.org/wiki/Cyrus_the_Great">Cyrus the Great</a> himself ("Ciro" == "Cyrus" in Portuguese), maybe becoming "Cyrus the Greater". That one will be a bit harder though. Maybe if <a href="https://github.com/cirosantilli/china-dictatorship/tree/4e5ad752ffe70c26fa0ff6a78e6eb64913153e33#falun-gong">Falung Gong</a> becomes the dominant religion in 2000 years like Christianism did, catapulting the Judaism benefactor Cyrus into greater fame, then there is some hope for Ciro as well.</p>
+<p>At the next useless gamified level, an <a href="https://en.wikipedia.org/wiki/Order_of_the_British_Empire">OBE</a> and more ambitiously <a href="https://en.wikipedia.org/wiki/Fellow_of_the_Royal_Society">ForMemRS</a> would be nice.</p>
+</div>
+<div class="paragraph">
+<p>The ultimate dream however would be to beat <a href="https://en.wikipedia.org/wiki/Cyrus_the_Great">Cyrus the Great</a> himself on Google searches ("Ciro" == "Cyrus" in Portuguese), maybe becoming "Cyrus the Greater"? That one will be a bit harder though. Maybe if <a href="https://github.com/cirosantilli/china-dictatorship/tree/4e5ad752ffe70c26fa0ff6a78e6eb64913153e33#falun-gong">Falung Gong</a> becomes the dominant religion in 2000 years like Christianism did, catapulting the Judaism benefactor Cyrus into greater fame, then there is some hope for Ciro as well.</p>
 </div>
 </div>
 </div>
@@ -3220,7 +3229,18 @@ xdg-open http://localhost:4000</pre>
 <p>When Ciro was very young, he was fatty, and other evil boys picked on him. Ciro was a bit stupid, and continue to try and hang out with those evil kids, and continue to get hurt. Advice to his children: stay away from evil people. If you come across evil people, smile a fake smile to them, and walk away, but never give your back to them, and always be ready to fight. If they laugh at you, know that you are shit like everyone else, pretend to laugh with them, and get out. Never show any weakness. If a fight is likely, always be ready, always have your friends and never be outnumbered, and fight back with full force. On the Internet, never read e-bully posts. Block them immediately, and anyone that likes their posts, and above all, never ever reply. Call parents or other authorities as soon as something becomes seriously bad, better live free pussy than dead or youth detention for murder. Similar advice applies if you are going to jail I guess.</p>
 </div>
 <div class="paragraph">
-<p>In the year 2000, Ciro lived with his parents for 10 months in the <a href="https://en.wikipedia.org/wiki/Coventry">Coventry, United Kingdom</a> because his father took some courses at the university of Warwick. This was Ciro&#8217;s most important educational experience, because it taught him the Holy Language of English, which infinitely expanded Ciro&#8217;s Internet horizons, and shaped Ciro&#8217;s <a href="#having-more-than-one-natural-language-is-bad-for-the-world">Having more than one natural language is bad for the world</a> philosophy. When he came back to Brazil, Ciro skipped dozens of levels in his English school, and was put to study with much older teenagers who marveled at Ciro&#8217;s incredibly cute, but since lost, British accent.</p>
+<p>In the year 2000, Ciro lived with his parents for 10 months in the <a href="https://en.wikipedia.org/wiki/Coventry">Coventry, United Kingdom</a> because his father took some courses at the <a href="https://en.wikipedia.org/wiki/University_of_Warwick">University of Warwick</a>. This was Ciro&#8217;s most important educational experience, because it taught him the Holy Language of English, which infinitely expanded Ciro&#8217;s Internet horizons, and shaped Ciro&#8217;s <a href="#having-more-than-one-natural-language-is-bad-for-the-world">Having more than one natural language is bad for the world</a> philosophy. When he came back to Brazil, Ciro skipped dozens of levels in his English school, and was put to study with much older teenagers who marveled at Ciro&#8217;s incredibly cute, but since lost, British accent.</p>
+</div>
+<div class="paragraph">
+<p>Another huge advantage of Coventry is that the <a href="https://hearsallacademy.org/">Hearsall Community Primary School</a> had two classes dedicated to foreign students to learn English before integrating with the British students. There were a lof of kids from Kosovo there due to the <a href="https://en.wikipedia.org/wiki/Kosovo_War">Kosovo war</a> which was just ending, and it was there that Ciro made his first <a href="#ciro-santillis-campaign-for-freedom-of-speech-in-china">Chinese</a> friend, yet unaware of course of the role the country would later play in his life. One particularly fun memory was that of playing soccer on the school playground with a sponge ball to avoid breaking the windows. Then one day it was raining, but Ciro still went for a <a href="https://en.wikipedia.org/wiki/Header_(association_football)">header</a>, and the soaked sponge ball was soaked and splashed Ciro with dirty water. Good days.</p>
+</div>
+<div class="paragraph">
+<p>Nothing summarizes that period of Ciro&#8217;s life better than anything: <a href="https://en.wikipedia.org/wiki/Ali_G">Ali G</a> interview with <a href="https://en.wikipedia.org/wiki/David_Beckham">David</a> and <a href="https://en.wikipedia.org/wiki/Victoria_Beckham">Victoria</a> Beckham <a href="https://www.youtube.com/watch?v=jIic9_ZhyC8" class="bare">https://www.youtube.com/watch?v=jIic9_ZhyC8</a></p>
+</div>
+<div class="videoblock">
+<div class="content">
+<iframe width="600" height="400" src="https://www.youtube.com/embed/jIic9_ZhyC8?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
 </div>
 <div class="paragraph">
 <p>After Coventry, Ciro&#8217;s family lived in the city of <a href="https://en.wikipedia.org/wiki/Santos,_S%C3%A3o_Paulo">Santos, São Paulo, Brazil</a>, which is the nearest beach city to the city of <a href="https://en.wikipedia.org/wiki/S%C3%A3o_Paulo">São Paulo</a>, and for this reason the <a href="https://en.wikipedia.org/wiki/List_of_busiest_container_ports">largest port of Latin America in 2018</a>, and a popular local tourist destination. Ciro lived there until he went to the <a href="#university-of-sao-paulo-brazil">University of São Paulo, Brazil</a>. Ciro idolizes Santos as the <a href="#ciro-santillis-ideal-city-to-live-in">perfect location to live</a> nature-wise due to its amazing wide sandy beach, in which Ciro spent endless hours walking on the sand and on the <a href="https://www.guinnessworldrecords.com/news/2012/9/best-brazilian-guinness-world-records-in-honor-of-independence-day-44636/">largest beachfront garden in the world</a> (<a href="https://web.archive.org/web/20180407071903/https://www.guinnessworldrecords.com/news/2012/9/best-brazilian-guinness-world-records-in-honor-of-independence-day-44636/">archive</a>), meditating, and playing some soccer after school was over. Santos is also the city where <a href="https://en.wikipedia.org/wiki/Pel%C3%A9">Pelé</a> first played professionally.</p>
@@ -4623,6 +4643,36 @@ xdg-open http://localhost:4000</pre>
 <div class="paragraph">
 <p>They are the most realistic depiction of spy craft ever done.</p>
 </div>
+<div class="paragraph">
+<p>Some honorable mentions:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Futurama">Futurama</a></p>
+<div class="ulist">
+<ul>
+<li>
+<p>S02E15 The Problem With Popplers</p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=q-RUHhCzgxI">S06E09 A Clockwork Origin</a></p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Rick_and_Morty">Rick and Morty</a></p>
+<div class="ulist">
+<ul>
+<li>
+<p>S02E04 Total Rickall</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
 </div>
 <div class="sect2">
 <h3 id="the-best-movies-of-all-time"><a class="anchor" href="#the-best-movies-of-all-time"></a><a class="link" href="#the-best-movies-of-all-time">4.4. The best movies of all time</a></h3>
@@ -4630,7 +4680,7 @@ xdg-open http://localhost:4000</pre>
 <p>Ciro has already watched all the best films in history, and as a result any of those new movies that is full of clichés and has no innovative aspect at all (99.99999% of all modern movies) makes Ciro want to puke and to start Googling <a href="https://en.wikipedia.org/wiki/Encyclopedia_Dramatica">Encyclopedia Dramatica</a> to classify as many clichés as possible.</p>
 </div>
 <div class="paragraph">
-<p>Movies that are very expensive to make tend to be bad, because they have to make returns and thus appeal to a large amorphous population without any specialization. See e.g. <a href="#primer-2004">Primer (2004)</a> and <a href="#the-man-from-earth-2007">The Man From Earth (2007)</a>.</p>
+<p>Movies that are very expensive to make tend to be bad, because they have to make returns and thus appeal to a large amorphous population without any specialization. See e.g. <a href="#primer-2004">Primer (2004)</a> and <a href="#the-man-from-earth-2007">The Man From Earth (2007)</a>. Looking down the <a href="https://en.wikipedia.org/wiki/List_of_biggest_box-office_bombs">largets flops of all time list</a> didn&#8217;t help much, only <a href="https://en.wikipedia.org/wiki/Heaven%27s_Gate_(film)">Heaven&#8217;s gate</a> appears reasonable from the top 20.</p>
 </div>
 <div class="sect3">
 <h4 id="once-upon-a-time-in-the-west-1968"><a class="anchor" href="#once-upon-a-time-in-the-west-1968"></a><a class="link" href="#once-upon-a-time-in-the-west-1968">4.4.1. Once upon a time in the west (1968)</a></h4>
@@ -4837,7 +4887,17 @@ xdg-open http://localhost:4000</pre>
 <p>1968 <a href="https://www.youtube.com/watch?v=hmK9GylXRh0">Alegria, Alegria</a> from the epynomous album <a href="https://en.wikipedia.org/wiki/Caetano_Veloso_(1968_album)">Caetano Veloso (1968)</a>. Critique of <a href="https://en.wikipedia.org/wiki/Military_dictatorship_in_Brazil">the Dictatorship</a>.</p>
 </li>
 <li>
-<p>1972 <a href="https://www.youtube.com/watch?v=cs2L70ZfVTI">Triste Bahia</a> from the <a href="https://en.wikipedia.org/wiki/Transa_(album)">Transa (1972)</a> album (literally: "The Fuck")</p>
+<p><a href="https://en.wikipedia.org/wiki/Transa_(album)">Transa (1972)</a> album (literally: "The Fuck")</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=cs2L70ZfVTI">Triste Bahia</a>. Inspired by <a href="https://en.wikipedia.org/wiki/Capoeira">Capoeira</a> music.</p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=n7StPm3ynBU">Mora na Filosofia</a></p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>1972 <a href="https://www.youtube.com/watch?v=MlmZIazQLJw">Você Não Entende Nada</a> performed by Caetano Veloso in album <a href="https://en.wikipedia.org/wiki/Caetano_e_Chico:_Juntos_e_Ao_Vivo">Caetano e Chico: Juntos e Ao Vivo (1972)</a>, originally by (TODO album, <a href="https://www.discogs.com/Gal-Costa-Legal-Voc%C3%AA-N%C3%A3o-Entende-Nada/release/5872459">Discogs</a> says Legal (1970), but <a href="https://en.wikipedia.org/wiki/Legal_(Gal_Costa_album)">wiki page</a> and photos of back disagree)</p>
@@ -5047,6 +5107,9 @@ xdg-open http://localhost:4000</pre>
 </div>
 <div class="paragraph">
 <p>By doing the prerequisites of the impossible goal you desire, maybe the next generation will be able to achieve it.</p>
+</div>
+<div class="paragraph">
+<p>This is basically why <a href="#ciro-santillis-stack-overflow-contributions">Ciro Santilli has contributed to Stack Overflow</a>, which has happened while was doing his overly ambitious projects and notice that all kinds of basic pre-requisites were not well explained anywhere.</p>
 </div>
 </div>
 </div>
@@ -7230,7 +7293,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/aad6871173c50c6199bb17410627b9371a1fb763">aad6871173c50c6199bb17410627b9371a1fb763</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eadc63c46c5e9413232e9e27b7eb0085768029aa">eadc63c46c5e9413232e9e27b7eb0085768029aa</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
