--- a/index.html
+++ b/index.html
@@ -3985,7 +3985,20 @@ xdg-open http://localhost:4000</pre>
 <p><a href="https://en.wikipedia.org/wiki/Quantum_electrodynamics" class="bare">https://en.wikipedia.org/wiki/Quantum_electrodynamics</a></p>
 </div>
 <div class="paragraph">
-<p>Theory that describes electrons and photons really well, and as Feynman puts it, <a href="https://youtu.be/eLQ2atfqk2c?list=PL8590A6E18255B3F4&amp;t=1047">accounts very precisely for all physical phenomena we have ever observed, except for gravity and nuclear physics</a> (including the laughter of the crowd ;-)).</p>
+<p>Theory that describes electrons and photons really well, and as Feynman puts it, <a href="https://youtu.be/eLQ2atfqk2c?list=PL8590A6E18255B3F4&amp;t=1047">accounts very precisely for all physical phenomena we have ever observed, except for gravity and nuclear physics</a> ("including the laughter of the crowd" ;-)).</p>
+</div>
+<div class="paragraph">
+<p>Learning it is one of <a href="#ciro-santilli">Ciro Santilli</a>'s main intellectual fetishes.</p>
+</div>
+<div class="paragraph">
+<p>Applications:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.quora.com/What-are-some-engineering-applications-of-QED-or-QCD-quantum-field-theories" class="bare">https://www.quora.com/What-are-some-engineering-applications-of-QED-or-QCD-quantum-field-theories</a></p>
+</li>
+</ul>
 </div>
 <div class="sect4">
 <h5 id="what-does-it-mean-that-photons-are-force-carriers-for-electromagnetism"><a class="anchor" href="#what-does-it-mean-that-photons-are-force-carriers-for-electromagnetism"></a><a class="link" href="#what-does-it-mean-that-photons-are-force-carriers-for-electromagnetism">2.2.10.1. What does it mean that photons are force carriers for electromagnetism?</a></h5>
@@ -7293,7 +7306,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eadc63c46c5e9413232e9e27b7eb0085768029aa">eadc63c46c5e9413232e9e27b7eb0085768029aa</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/d200f08ba82aa61ad5eea6c6ed06818eb7730472">d200f08ba82aa61ad5eea6c6ed06818eb7730472</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
