--- a/x86-paging.html
+++ b/x86-paging.html
@@ -699,7 +699,7 @@ is[2] = 1;</pre>
 <p>All real page table entries have other fields, notably fields to set pages to read-only for Copy-on-write. This will be explained elsewhere.</p>
 </div>
 <div class="paragraph">
-<p>It would be impractical to align things at 21 bytes since memory is addressable by bytes and not bits. Therefore, even in only 21 bits are needed in this case, hardware designers would probably choose 32 to make access faster, and just reserve bits the remaining bits for later usage. The actual value on x86 is 32 bits.</p>
+<p>It would be impractical to align things at 21 bits since memory is addressable by bytes and not bits. Therefore, even in only 21 bits are needed in this case, hardware designers would probably choose 32 to make access faster, and just reserve bits the remaining bits for later usage. The actual value on x86 is 32 bits.</p>
 </div>
 <div class="paragraph">
 <p>Here is a screenshot from the Intel manual image "Formats of CR3 and Paging-Structure Entries with 32-Bit Paging" showing the structure of a page table in all its glory: <a href="#image-x86-page-entry-format">Figure 2, &#8220;x86 page entry format&#8221;</a>.</p>
@@ -1808,7 +1808,7 @@ Text
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/b8616c8a5bd78c6bc3d504b7adb2f84c39f6e327">b8616c8a5bd78c6bc3d504b7adb2f84c39f6e327</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/c7e8c4483503482d9cf6deed73c4914659870e9a">c7e8c4483503482d9cf6deed73c4914659870e9a</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
